--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.11",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@popperjs/core": "^2.4.2",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^4.5.0",
+    "firebase": "^7.15.5",
+    "jquery": "^3.5.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
