--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.15.5",
     "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.6.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
