--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "@popperjs/core": "^2.4.2",
+    "@types/jquery": "^3.5.0",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.0",
     "firebase": "^7.15.5",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-toastr": "^12.1.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
